--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="icon" href="assets/img/icon.png">
 
 </head>
 
